--- a/harvest-app/package.json
+++ b/harvest-app/package.json
@@ -48,7 +48,7 @@
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
